manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anytype
  labels:
    name: anytype
    app.kubernetes.io/name: anytype-agent
